:sparkles: add a get sound route
